--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,8 @@ spring.security.user.password=password
 
 #Log
 #logging.level.org.springframework.security=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 #MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/jwt_credential
@@ -24,4 +26,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 #JWT key
-jwt.key=7a4a53262d7e6c3e7d474c294f42546359644e746a3b2e304b276f2529
+jwt.key=
