--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,11 +9,11 @@ spring.thymeleaf.suffix=.html
 spring.application.name=Bootstrap Spring Boot
 
 #Spring Security
-spring.security.user.name=user
-spring.security.user.password=password
+#spring.security.user.name=user
+#spring.security.user.password=password
 
 #Log
-#logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.security=TRACE
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
@@ -21,6 +21,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.datasource.url=jdbc:mysql://localhost:3306/jwt_credential
 spring.datasource.username=mysql
 spring.datasource.password=secret
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
